# desafio-backend-lc-rs

./: README.md
back/: .env  Cargo.toml  Rocket.toml
back/src/: main.rs
back/src/controllers/: cards_controller.rs  login_controller.rs  mod.rs
back/src/model/: api_response.rs  cards.rs  errors.rs  login.rs  mod.rs
back/src/repositories/: cards_repository.rs  mod.rs
back/src/services/: error_handler.rs  mod.rs
back/src/services/guards/: auth_guard.rs  card_guard.rs  login_guard.rs  mod.rs
